multi-generational set-up

--- a/cos360_experiment/Simulations.ipynb
+++ b/cos360_experiment/Simulations.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 257,
+   "execution_count": 359,
    "id": "d98c1ff5",
    "metadata": {},
    "outputs": [],
@@ -23,6 +23,7 @@
     "import numpy as np\n",
     "from scipy.stats import beta, binom\n",
     "import random\n",
+    "import json\n",
     "\n",
     "# simulation-wide global variables\n",
     "num_bins = 3\n",
@@ -44,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 258,
+   "execution_count": 360,
    "id": "5719f0f9",
    "metadata": {},
    "outputs": [],
@@ -67,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 259,
+   "execution_count": 361,
    "id": "d2d9a5be",
    "metadata": {},
    "outputs": [],
@@ -105,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 260,
+   "execution_count": 362,
    "id": "fd2cf3aa",
    "metadata": {},
    "outputs": [],
@@ -152,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 261,
+   "execution_count": 363,
    "id": "105a6444",
    "metadata": {},
    "outputs": [],
@@ -195,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 262,
+   "execution_count": 364,
    "id": "4dc70fa0",
    "metadata": {},
    "outputs": [],
@@ -238,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 263,
+   "execution_count": 365,
    "id": "bb39fd90",
    "metadata": {},
    "outputs": [],
@@ -276,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 264,
+   "execution_count": 366,
    "id": "105a4755",
    "metadata": {},
    "outputs": [],
@@ -319,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 265,
+   "execution_count": 367,
    "id": "8f64893e",
    "metadata": {},
    "outputs": [],
@@ -346,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 266,
+   "execution_count": 368,
    "id": "fc5f1d38",
    "metadata": {},
    "outputs": [],
@@ -374,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 267,
+   "execution_count": 369,
    "id": "f6a3fade",
    "metadata": {},
    "outputs": [],
@@ -400,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 268,
+   "execution_count": 370,
    "id": "14f039a0",
    "metadata": {},
    "outputs": [],
@@ -439,7 +440,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 269,
+   "execution_count": 371,
    "id": "7fb3cf36",
    "metadata": {},
    "outputs": [],
@@ -485,7 +486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 270,
+   "execution_count": 372,
    "id": "3325450f",
    "metadata": {},
    "outputs": [],
@@ -547,8 +548,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 325,
-   "id": "be89417e",
+   "execution_count": 373,
+   "id": "b2ed316b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -647,53 +648,221 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 330,
+   "execution_count": 374,
    "id": "645bddf9",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# gathering_strategies = [\"random\"]\n",
+    "# bin_choosing_strategies = [\"maxd\"]\n",
+    "# reporting_strategies = [\"rs\"]\n",
+    "# reporting_setting = [\"data\"]\n",
+    "# alpha_values = [0.5]\n",
+    "\n",
     "gathering_strategies = [\"random\", \"eg\", \"ts\", \"ag\", \"cg\", \"wsls\"]\n",
     "bin_choosing_strategies = [\"maxd\", \"maxs\"]\n",
     "reporting_strategies = [\"rs\"]\n",
     "reporting_setting = [\"rate\", \"data\", \"subset\"]\n",
-    "alpha_values = [0, 0.25, 0.5, 1]\n",
-    "\n",
-    "gathering_strategies = [\"random\"]\n",
-    "bin_choosing_strategies = [\"maxd\"]\n",
-    "reporting_strategies = [\"rs\"]\n",
-    "reporting_setting = [\"data\"]\n",
-    "alpha_values = [0.5]"
+    "alpha_values = [0, 0.25, 0.5, 0.75, 1]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 331,
-   "id": "648c10ad",
+   "execution_count": 375,
+   "id": "b749d70f",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "58\n"
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn [375], line 16\u001b[0m\n\u001b[1;32m     13\u001b[0m mpe_list \u001b[38;5;241m=\u001b[39m []\n\u001b[1;32m     15\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m _ \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(num_runs):\n\u001b[0;32m---> 16\u001b[0m     participants \u001b[38;5;241m=\u001b[39m \u001b[43mmake_participants\u001b[49m\u001b[43m(\u001b[49m\u001b[43mgathering_strategy\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mbin_choosing_strategy\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mreporting_strategy\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43msetting\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43malpha_value\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     17\u001b[0m     mean_percent_error \u001b[38;5;241m=\u001b[39m peer_review(participants)\n\u001b[1;32m     18\u001b[0m     mpe_list\u001b[38;5;241m.\u001b[39mappend(mean_percent_error)\n",
+      "Cell \u001b[0;32mIn [372], line 43\u001b[0m, in \u001b[0;36mmake_participants\u001b[0;34m(gathering_strategy, bin_choosing_strategy, reporting_strategy, setting, alpha_value)\u001b[0m\n\u001b[1;32m     41\u001b[0m \u001b[38;5;66;03m# sample\u001b[39;00m\n\u001b[1;32m     42\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;241m0\u001b[39m, num_draws):\n\u001b[0;32m---> 43\u001b[0m     \u001b[43mparticipant\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43msample\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     45\u001b[0m \u001b[38;5;66;03m# choose the bin\u001b[39;00m\n\u001b[1;32m     46\u001b[0m participant\u001b[38;5;241m.\u001b[39mchoose_bin(participant\u001b[38;5;241m.\u001b[39mbin_sample_order, participant\u001b[38;5;241m.\u001b[39mvalues_sampled)\n",
+      "Cell \u001b[0;32mIn [361], line 19\u001b[0m, in \u001b[0;36mParticipant.sample\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m     17\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21msample\u001b[39m(\u001b[38;5;28mself\u001b[39m):\n\u001b[1;32m     18\u001b[0m     sample_number \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mlen\u001b[39m(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mbin_sample_order)\n\u001b[0;32m---> 19\u001b[0m     bin_number, value \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mstrategy_gather\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mdraw\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mlen\u001b[39;49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mvalues_sampled\u001b[49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mbin_sample_order\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mvalues_sampled\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     20\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mbin_sample_order\u001b[38;5;241m.\u001b[39mappend(bin_number)\n\u001b[1;32m     21\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mvalues_sampled\u001b[38;5;241m.\u001b[39mappend(value)\n",
+      "Cell \u001b[0;32mIn [364], line 21\u001b[0m, in \u001b[0;36mThompsonSampling.draw\u001b[0;34m(self, draw_number, bin_sample_order, values_sampled)\u001b[0m\n\u001b[1;32m     19\u001b[0m bin_samples \u001b[38;5;241m=\u001b[39m []\n\u001b[1;32m     20\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m bin_number \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;241m0\u001b[39m, num_bins):\n\u001b[0;32m---> 21\u001b[0m     sample \u001b[38;5;241m=\u001b[39m \u001b[43mbeta\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mrvs\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43malpha_priors\u001b[49m\u001b[43m[\u001b[49m\u001b[43mbin_number\u001b[49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mbeta_priors\u001b[49m\u001b[43m[\u001b[49m\u001b[43mbin_number\u001b[49m\u001b[43m]\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     22\u001b[0m     bin_samples\u001b[38;5;241m.\u001b[39mappend(sample)\n\u001b[1;32m     23\u001b[0m best_bin \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39margmax(bin_samples)\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
    ],
    "source": [
+    "# Initialize the dictionary to store mean percent errors\n",
+    "mean_percent_errors_dict = {}\n",
+    "\n",
+    "# Number of runs for each key\n",
+    "num_runs = 10\n",
+    "\n",
     "for gathering_strategy in gathering_strategies:\n",
     "    for bin_choosing_strategy in bin_choosing_strategies:\n",
     "        for reporting_strategy in reporting_strategies:\n",
     "            for setting in reporting_setting:\n",
     "                for alpha_value in alpha_values:\n",
-    "                    participants = make_participants(gathering_strategy, bin_choosing_strategy, reporting_strategy, setting, alpha_value)\n",
-    "                    results = peer_review(participants)\n",
-    "                    print(results)"
+    "                    # Initialize a list to store MPE for each run\n",
+    "                    mpe_list = []\n",
+    "\n",
+    "                    for _ in range(num_runs):\n",
+    "                        participants = make_participants(gathering_strategy, bin_choosing_strategy, reporting_strategy, setting, alpha_value)\n",
+    "                        mean_percent_error = peer_review(participants)\n",
+    "                        mpe_list.append(mean_percent_error)\n",
+    "\n",
+    "                    # Calculate the average MPE\n",
+    "                    avg_mpe = np.mean(mpe_list)\n",
+    "\n",
+    "                    # Create a key based on the variable names\n",
+    "                    key = (gathering_strategy, bin_choosing_strategy, reporting_strategy, setting, alpha_value)\n",
+    "\n",
+    "                    # Store the average MPE in the dictionary\n",
+    "                    mean_percent_errors_dict[key] = avg_mpe\n",
+    "\n",
+    "print(mean_percent_errors_dict)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "da65650c",
+   "id": "b6b08be9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Convert tuple keys to strings\n",
+    "string_keys_dict = {str(key): value for key, value in mean_percent_errors_dict.items()}\n",
+    "\n",
+    "# Specify the file path to save the JSON file\n",
+    "json_file_path = 'mean_percent_errors.json'\n",
+    "\n",
+    "# Save the dictionary with string keys to a JSON file\n",
+    "with open(json_file_path, 'w') as json_file:\n",
+    "    json.dump(string_keys_dict, json_file)\n",
+    "\n",
+    "print(f\"Mean percent errors saved to {json_file_path}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "516c4543",
+   "metadata": {},
+   "source": [
+    "### Find best 5 and worst 5 settings"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "05316144",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Convert tuple keys to strings\n",
+    "string_keys_dict = {str(key): value for key, value in mean_percent_errors_dict.items()}\n",
+    "\n",
+    "# Sort the dictionary by values\n",
+    "sorted_dict = dict(sorted(string_keys_dict.items(), key=lambda item: item[1]))\n",
+    "\n",
+    "# Print the best five settings with their MPE\n",
+    "print(\"Best 15 Settings:\")\n",
+    "for key in list(sorted_dict)[:15]:\n",
+    "    setting_tuple = eval(key)  # Convert the string back to a tuple\n",
+    "    mpe = sorted_dict[key]\n",
+    "    print(f\"{setting_tuple}: {mpe}\")\n",
+    "\n",
+    "# Print the worst five settings with their MPE\n",
+    "print(\"\\nWorst 15 Settings:\")\n",
+    "for key in list(sorted_dict)[-15:]:\n",
+    "    setting_tuple = eval(key)  # Convert the string back to a tuple\n",
+    "    mpe = sorted_dict[key]\n",
+    "    print(f\"{setting_tuple}: {mpe}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "12d195a9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Convert tuple keys to strings\n",
+    "string_keys_dict = {str(key): value for key, value in mean_percent_errors_dict.items()}\n",
+    "\n",
+    "# Filter out settings where alpha is equal to 1\n",
+    "filtered_dict = {key: value for key, value in string_keys_dict.items() if eval(key)[-1] != 1}\n",
+    "\n",
+    "# Sort the filtered dictionary by values in descending order\n",
+    "sorted_filtered_dict = dict(sorted(filtered_dict.items(), key=lambda item: item[1], reverse=True))\n",
+    "r\n",
+    "# Print the worst settings with alpha not equal to 1\n",
+    "print(\"Worst Settings (alpha not equal to 1) in Order:\")\n",
+    "for key, value in sorted_filtered_dict.items():\n",
+    "    setting_tuple = eval(key)  # Convert the string back to a tuple\n",
+    "    print(f\"{setting_tuple}: {value}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "77830cd6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from collections import defaultdict\n",
+    "\n",
+    "# Convert tuple keys to strings\n",
+    "string_keys_dict = {str(key): value for key, value in mean_percent_errors_dict.items()}\n",
+    "\n",
+    "# Create a defaultdict to store MPE values for each unique setting component\n",
+    "component_mpes = defaultdict(list)\n",
+    "\n",
+    "# Populate the defaultdict with MPE values\n",
+    "for key, value in string_keys_dict.items():\n",
+    "    setting_tuple = eval(key)\n",
+    "    \n",
+    "    # Iterate over all components in the setting tuple\n",
+    "    for component in setting_tuple:\n",
+    "        component_mpes[component].append(value)\n",
+    "\n",
+    "# Calculate average MPE for each unique setting component\n",
+    "average_mpes = {component: np.mean(mpe_list) for component, mpe_list in component_mpes.items()}\n",
+    "\n",
+    "# Print the average MPE for each setting component\n",
+    "print(\"Average MPE for Each Setting Component:\")\n",
+    "for component, average_mpe in average_mpes.items():\n",
+    "    print(f\"{component}: {average_mpe}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d362ceb0",
+   "metadata": {},
+   "source": [
+    "### Setting corresponding to what the experiment showed..."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dce20adc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Convert tuple keys to strings\n",
+    "string_keys_dict = {str(key): value for key, value in mean_percent_errors_dict.items()}\n",
+    "\n",
+    "# Specify the criteria for finding the entry\n",
+    "target_key = \"('wsls', 'maxd', 'rs', 'data', 0.25)\"\n",
+    "\n",
+    "# Find and print the entry based on the specified criteria\n",
+    "if target_key in string_keys_dict:\n",
+    "    target_mpe = string_keys_dict[target_key]\n",
+    "    print(f\"Entry with criteria {target_key}: {target_mpe}\")\n",
+    "else:\n",
+    "    print(f\"No entry found with criteria {target_key}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9951cb6f",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -701,70 +870,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aedcb64b",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "15d774a3",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c21fac59",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "564d898a",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "91440f8c",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8816f693",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f033987f",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "04496976",
+   "id": "c7528e9c",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "e962cb43",
+   "id": "5e806deb",
    "metadata": {},
    "source": [
     "# Extra Scratch Code"
@@ -840,7 +953,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "48264f4f",
+   "id": "8137ff12",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -848,7 +961,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1cc47cff",
+   "id": "32f83c6c",
    "metadata": {},
    "outputs": [],
    "source": []
