fixed publishing bias

--- a/Thesis_Simulations/Multi_Generational_Simulations.ipynb
+++ b/Thesis_Simulations/Multi_Generational_Simulations.ipynb
@@ -44,7 +44,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "90cf96ee",
+   "id": "3d3ecd51",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -169,110 +169,130 @@
       "   bin 1: 1 zero(s), 1 one(s)\n",
       "   bin 2: 1 zero(s), 1 one(s)\n",
       "\n",
-      "   report 1 zeros, 3 ones got a score of 2\n",
-      "   report 4 zeros, 1 ones got a score of 0\n",
-      "   report 3 zeros, 1 ones got a score of 0\n",
-      "   report 2 zeros, 0 ones got a score of 0\n",
+      "   report 6 zeros, 1 ones got a score of -4\n",
+      "   report 0 zeros, 5 ones got a score of 6\n",
+      "   report 0 zeros, 3 ones got a score of 4\n",
       "   report 1 zeros, 2 ones got a score of 2\n",
-      "   report 3 zeros, 1 ones got a score of 0\n",
-      "   report 8 zeros, 0 ones got a score of 0\n",
-      "   report 1 zeros, 4 ones got a score of 2\n",
-      "   report 3 zeros, 7 ones got a score of 2\n",
-      "   report 2 zeros, 2 ones got a score of 0\n",
-      "REPORTED BIN: 1 ZEROS, 3 ONES\n",
-      "REPORTED BIN: 1 ZEROS, 4 ONES\n",
+      "   report 4 zeros, 1 ones got a score of -2\n",
+      "   report 1 zeros, 2 ones got a score of 2\n",
+      "   report 1 zeros, 3 ones got a score of 3\n",
+      "   report 5 zeros, 1 ones got a score of -3\n",
+      "   report 9 zeros, 1 ones got a score of -7\n",
+      "   report 4 zeros, 2 ones got a score of -1\n",
+      "[3.711655280526505e-05, 0.817546480786308, 0.11064288453631092, 0.014973886116837474, 0.0002742562908770253, 0.014973886116837474, 0.04070324253281448, 0.00010089325102559259, 1.8479243520951635e-06, 0.000745505891831596]\n",
+      "REPORTED BIN: 0 ZEROS, 5 ONES\n",
+      "selected index: 1\n",
+      "[0.00020343018301441295, 0.6064168288621747, 0.08206959329351092, 0.0015031570345092264, 0.08206959329351092, 0.22308828411877504, 0.0005529805698481766, 1.0128192429825652e-05, 0.004086004452226816]\n",
+      "REPORTED BIN: 0 ZEROS, 3 ONES\n",
+      "selected index: 1\n",
       "\n",
       "* Generation 1...\n",
       "Scientific record\n",
-      "   bin 0: 2 zero(s), 5 one(s)\n",
+      "   bin 0: 1 zero(s), 1 one(s)\n",
       "   bin 1: 1 zero(s), 1 one(s)\n",
-      "   bin 2: 2 zero(s), 4 one(s)\n",
+      "   bin 2: 1 zero(s), 9 one(s)\n",
       "\n",
-      "   report 3 zeros, 1 ones got a score of 0\n",
-      "   report 7 zeros, 3 ones got a score of 0\n",
-      "   report 3 zeros, 7 ones got a score of 2\n",
-      "   report 1 zeros, 0 ones got a score of 0\n",
-      "   report 1 zeros, 0 ones got a score of 0\n",
-      "   report 2 zeros, 2 ones got a score of 0\n",
-      "   report 0 zeros, 1 ones got a score of 2\n",
-      "   report 0 zeros, 1 ones got a score of 2\n",
-      "   report 1 zeros, 0 ones got a score of 0\n",
-      "   report 1 zeros, 0 ones got a score of 0\n",
-      "REPORTED BIN: 1 ZEROS, 0 ONES\n",
-      "REPORTED BIN: 1 ZEROS, 0 ONES\n",
+      "   report 2 zeros, 6 ones got a score of 5\n",
+      "   report 2 zeros, 2 ones got a score of 1\n",
+      "   report 4 zeros, 2 ones got a score of -1\n",
+      "   report 3 zeros, 3 ones got a score of 1\n",
+      "   report 6 zeros, 2 ones got a score of -3\n",
+      "   report 1 zeros, 4 ones got a score of 4\n",
+      "   report 2 zeros, 6 ones got a score of 5\n",
+      "   report 5 zeros, 2 ones got a score of -2\n",
+      "   report 1 zeros, 2 ones got a score of 2\n",
+      "   report 1 zeros, 2 ones got a score of 2\n",
+      "[0.3987541401480655, 0.007303436836339668, 0.0009884126928467395, 0.007303436836339668, 0.00013376711174107656, 0.14669345024246933, 0.3987541401480655, 0.00036361670909121905, 0.019852799637520537, 0.019852799637520537]\n",
+      "REPORTED BIN: 2 ZEROS, 6 ONES\n",
+      "selected index: 0\n",
+      "[0.01214717193751363, 0.0016439409546872405, 0.01214717193751363, 0.00022248321472686516, 0.24398247046323907, 0.6632131159227685, 0.0006047720797291895, 0.03301943674491095, 0.03301943674491095]\n",
+      "REPORTED BIN: 2 ZEROS, 6 ONES\n",
+      "selected index: 5\n",
       "\n",
       "* Generation 2...\n",
       "Scientific record\n",
-      "   bin 0: 4 zero(s), 5 one(s)\n",
-      "   bin 1: 1 zero(s), 1 one(s)\n",
-      "   bin 2: 2 zero(s), 4 one(s)\n",
+      "   bin 0: 3 zero(s), 7 one(s)\n",
+      "   bin 1: 3 zero(s), 7 one(s)\n",
+      "   bin 2: 1 zero(s), 9 one(s)\n",
       "\n",
-      "   report 2 zeros, 2 ones got a score of 0\n",
-      "   report 3 zeros, 7 ones got a score of 2\n",
+      "   report 0 zeros, 2 ones got a score of 3\n",
       "   report 1 zeros, 0 ones got a score of 0\n",
-      "   report 3 zeros, 1 ones got a score of 0\n",
-      "   report 4 zeros, 6 ones got a score of 2\n",
-      "   report 3 zeros, 1 ones got a score of 0\n",
-      "   report 3 zeros, 1 ones got a score of 0\n",
-      "   report 1 zeros, 1 ones got a score of 0\n",
-      "   report 3 zeros, 1 ones got a score of 0\n",
-      "   report 2 zeros, 2 ones got a score of 0\n",
-      "REPORTED BIN: 4 ZEROS, 6 ONES\n",
-      "REPORTED BIN: 3 ZEROS, 7 ONES\n",
+      "   report 4 zeros, 6 ones got a score of 3\n",
+      "   report 2 zeros, 2 ones got a score of 1\n",
+      "   report 2 zeros, 2 ones got a score of 1\n",
+      "   report 2 zeros, 1 ones got a score of 0\n",
+      "   report 4 zeros, 3 ones got a score of 0\n",
+      "   report 1 zeros, 2 ones got a score of 2\n",
+      "   report 6 zeros, 4 ones got a score of -1\n",
+      "   report 0 zeros, 3 ones got a score of 4\n",
+      "[0.1810115718711507, 0.009012035504123496, 0.1810115718711507, 0.024497252348286654, 0.024497252348286654, 0.009012035504123496, 0.009012035504123496, 0.06659043590552328, 0.00331534258507415, 0.49204046655815736]\n",
+      "REPORTED BIN: 0 ZEROS, 3 ONES\n",
+      "selected index: 9\n",
+      "[0.3563503782371181, 0.017741640644205574, 0.3563503782371181, 0.04822677937019445, 0.04822677937019445, 0.017741640644205574, 0.017741640644205574, 0.13109397800710312, 0.006526784845654896]\n",
+      "REPORTED BIN: 1 ZEROS, 2 ONES\n",
+      "selected index: 7\n",
       "\n",
       "* Generation 3...\n",
       "Scientific record\n",
-      "   bin 0: 4 zero(s), 5 one(s)\n",
-      "   bin 1: 8 zero(s), 14 one(s)\n",
-      "   bin 2: 2 zero(s), 4 one(s)\n",
+      "   bin 0: 3 zero(s), 7 one(s)\n",
+      "   bin 1: 4 zero(s), 9 one(s)\n",
+      "   bin 2: 1 zero(s), 12 one(s)\n",
       "\n",
-      "   report 2 zeros, 5 ones got a score of 2\n",
-      "   report 1 zeros, 7 ones got a score of 2\n",
-      "   report 2 zeros, 2 ones got a score of 0\n",
-      "   report 8 zeros, 2 ones got a score of 0\n",
-      "   report 1 zeros, 3 ones got a score of 2\n",
-      "   report 6 zeros, 4 ones got a score of 0\n",
-      "   report 8 zeros, 2 ones got a score of 0\n",
-      "   report 4 zeros, 6 ones got a score of 2\n",
-      "   report 2 zeros, 2 ones got a score of 0\n",
-      "   report 8 zeros, 2 ones got a score of 0\n",
-      "REPORTED BIN: 8 ZEROS, 2 ONES\n",
-      "REPORTED BIN: 4 ZEROS, 6 ONES\n",
+      "   report 3 zeros, 1 ones got a score of -1\n",
+      "   report 3 zeros, 1 ones got a score of -1\n",
+      "   report 4 zeros, 6 ones got a score of 3\n",
+      "   report 5 zeros, 5 ones got a score of 1\n",
+      "   report 2 zeros, 5 ones got a score of 4\n",
+      "   report 5 zeros, 5 ones got a score of 1\n",
+      "   report 2 zeros, 5 ones got a score of 4\n",
+      "   report 2 zeros, 5 ones got a score of 4\n",
+      "   report 4 zeros, 6 ones got a score of 3\n",
+      "   report 2 zeros, 2 ones got a score of 1\n",
+      "[0.0017283009142662383, 0.0017283009142662383, 0.09436203261952844, 0.012770512411346366, 0.25650259856612384, 0.012770512411346366, 0.25650259856612384, 0.25650259856612384, 0.09436203261952844, 0.012770512411346366]\n",
+      "REPORTED BIN: 2 ZEROS, 5 ONES\n",
+      "selected index: 4\n",
+      "[0.0023245554200096914, 0.0023245554200096914, 0.12691642558204777, 0.01717627040352491, 0.01717627040352491, 0.34499461339265514, 0.34499461339265514, 0.12691642558204777, 0.01717627040352491]\n",
+      "REPORTED BIN: 2 ZEROS, 5 ONES\n",
+      "selected index: 6\n",
       "\n",
       "* Generation 4...\n",
       "Scientific record\n",
-      "   bin 0: 4 zero(s), 5 one(s)\n",
-      "   bin 1: 8 zero(s), 14 one(s)\n",
-      "   bin 2: 14 zero(s), 12 one(s)\n",
+      "   bin 0: 7 zero(s), 17 one(s)\n",
+      "   bin 1: 4 zero(s), 9 one(s)\n",
+      "   bin 2: 1 zero(s), 12 one(s)\n",
       "\n",
-      "   report 4 zeros, 6 ones got a score of 2\n",
-      "   report 6 zeros, 4 ones got a score of 0\n",
-      "   report 7 zeros, 3 ones got a score of 0\n",
-      "   report 7 zeros, 3 ones got a score of 0\n",
-      "   report 7 zeros, 3 ones got a score of 0\n",
-      "   report 8 zeros, 2 ones got a score of 0\n",
-      "   report 3 zeros, 7 ones got a score of 2\n",
-      "   report 5 zeros, 5 ones got a score of 0\n",
-      "   report 4 zeros, 6 ones got a score of 2\n",
-      "   report 2 zeros, 8 ones got a score of 2\n",
-      "REPORTED BIN: 4 ZEROS, 6 ONES\n",
-      "REPORTED BIN: 2 ZEROS, 8 ONES\n",
+      "   report 2 zeros, 2 ones got a score of 1\n",
+      "   report 5 zeros, 2 ones got a score of -2\n",
+      "   report 5 zeros, 5 ones got a score of 1\n",
+      "   report 3 zeros, 4 ones got a score of 2\n",
+      "   report 6 zeros, 1 ones got a score of -4\n",
+      "   report 3 zeros, 4 ones got a score of 2\n",
+      "   report 3 zeros, 4 ones got a score of 2\n",
+      "   report 3 zeros, 1 ones got a score of -1\n",
+      "   report 4 zeros, 3 ones got a score of 0\n",
+      "   report 3 zeros, 4 ones got a score of 2\n",
+      "[0.07444427135390787, 0.0037063620274928265, 0.07444427135390787, 0.20236051005420203, 0.0005016015547681677, 0.20236051005420203, 0.20236051005420203, 0.010074936549024374, 0.02738651694409084, 0.20236051005420203]\n",
+      "REPORTED BIN: 3 ZEROS, 4 ONES\n",
+      "selected index: 3\n",
+      "[0.09333072433382977, 0.004646663153230646, 0.09333072433382977, 0.0006288574739476012, 0.25369921199356993, 0.25369921199356993, 0.012630940012397073, 0.03433445471205523, 0.25369921199356993]\n",
+      "REPORTED BIN: 3 ZEROS, 4 ONES\n",
+      "selected index: 5\n",
       "\n",
       "\n",
       "* FINAL RESULTS\n",
       "Scientific record\n",
-      "   bin 0: 10 zero(s), 19 one(s)\n",
-      "   bin 1: 8 zero(s), 14 one(s)\n",
-      "   bin 2: 14 zero(s), 12 one(s)\n",
+      "   bin 0: 7 zero(s), 17 one(s)\n",
+      "   bin 1: 4 zero(s), 9 one(s)\n",
+      "   bin 2: 7 zero(s), 20 one(s)\n",
       "\n",
-      "0.10999919620609273\n",
-      "0.03074993941900539\n"
+      "0.21379392212725545\n",
+      "0.10241869501516787\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "(0.10999919620609273, 0.03074993941900539)"
+       "(0.21379392212725545, 0.10241869501516787)"
       ]
      },
      "execution_count": 5,
@@ -287,7 +307,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8c8f3f2a",
+   "id": "8faf3402",
    "metadata": {},
    "source": [
     "## Searching over the space of publishing policies\n",
@@ -298,7 +318,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "8b85f3fa",
+   "id": "840fe18e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -315,7 +335,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "b86b7f47",
+   "id": "fc27bd8b",
    "metadata": {},
    "outputs": [
     {
@@ -102561,7 +102581,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7a1b2b5a",
+   "id": "baf21d6b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102580,7 +102600,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "6bf02bab",
+   "id": "f56f2696",
    "metadata": {},
    "outputs": [
     {
@@ -102624,7 +102644,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f670f2d4",
+   "id": "1a6b0b51",
    "metadata": {},
    "source": [
     "## Fix a setting and look at how the evaluation metric changes over generations"
@@ -102633,7 +102653,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "0142b729",
+   "id": "7e5f46d1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102652,7 +102672,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "c42665c2",
+   "id": "4cf56143",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102692,7 +102712,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "ac283b50",
+   "id": "49d89054",
    "metadata": {},
    "outputs": [
     {
@@ -102750,7 +102770,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f01367cb",
+   "id": "245d828c",
    "metadata": {},
    "outputs": [],
    "source": []
