first attempt at publication crisis analysis

--- a/Thesis_Simulations/analysis.ipynb
+++ b/Thesis_Simulations/analysis.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "b36277b2",
+   "id": "0bc54305",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8d552437",
+   "id": "a8189ef1",
    "metadata": {},
    "source": [
     "## Analyzing the search over the space of publishing policies\n",
@@ -31,7 +31,7 @@
   {
    "cell_type": "code",
    "execution_count": 124,
-   "id": "720bb192",
+   "id": "c2b70c98",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4f4236d7",
+   "id": "0369682e",
    "metadata": {},
    "source": [
     "### Graphic to show relationship between supporting data and given metrics"
@@ -50,7 +50,7 @@
   {
    "cell_type": "code",
    "execution_count": 125,
-   "id": "4b7c763c",
+   "id": "53374994",
    "metadata": {
     "scrolled": false
    },
@@ -77,7 +77,7 @@
   {
    "cell_type": "code",
    "execution_count": 126,
-   "id": "4646afb4",
+   "id": "32544e03",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,7 +102,7 @@
   {
    "cell_type": "code",
    "execution_count": 127,
-   "id": "d7b978a2",
+   "id": "5431ef34",
    "metadata": {},
    "outputs": [
     {
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6301aa75",
+   "id": "cabf28f9",
    "metadata": {},
    "source": [
     "### Graphic to show relationship between surprise level and given metrics"
@@ -145,7 +145,7 @@
   {
    "cell_type": "code",
    "execution_count": 128,
-   "id": "84588963",
+   "id": "756d4334",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -170,7 +170,7 @@
   {
    "cell_type": "code",
    "execution_count": 129,
-   "id": "f0c5c08c",
+   "id": "1a99618a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -195,7 +195,7 @@
   {
    "cell_type": "code",
    "execution_count": 130,
-   "id": "38bb0f00",
+   "id": "e0b8d221",
    "metadata": {},
    "outputs": [
     {
@@ -229,7 +229,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f32ae00a",
+   "id": "781904c6",
    "metadata": {},
    "source": [
     "### Graphic to show relationship between publication bias and given metrics"
@@ -238,7 +238,7 @@
   {
    "cell_type": "code",
    "execution_count": 100,
-   "id": "d9af4f76",
+   "id": "c2a2ca24",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -263,7 +263,7 @@
   {
    "cell_type": "code",
    "execution_count": 101,
-   "id": "c295ddeb",
+   "id": "7a39b1cd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -288,7 +288,7 @@
   {
    "cell_type": "code",
    "execution_count": 102,
-   "id": "1a2d53d3",
+   "id": "bcaa0b6f",
    "metadata": {},
    "outputs": [
     {
@@ -322,7 +322,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b73aadd7",
+   "id": "04038451",
    "metadata": {},
    "source": [
     "## Show score over generations for a fixed setting"
@@ -331,7 +331,7 @@
   {
    "cell_type": "code",
    "execution_count": 131,
-   "id": "b5979edf",
+   "id": "6415347f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -342,7 +342,7 @@
   {
    "cell_type": "code",
    "execution_count": 132,
-   "id": "6122473e",
+   "id": "0979ad02",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -357,7 +357,7 @@
   {
    "cell_type": "code",
    "execution_count": 133,
-   "id": "80fb3fad",
+   "id": "31de83ab",
    "metadata": {},
    "outputs": [
     {
@@ -395,7 +395,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2291786f",
+   "id": "cff44d06",
    "metadata": {},
    "source": [
     "## Show scores for different probabilities"
@@ -404,7 +404,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "aa383442",
+   "id": "dc97c91d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -419,7 +419,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "8503b9a8",
+   "id": "154254b2",
    "metadata": {},
    "outputs": [
     {
@@ -479,7 +479,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6a0303a1",
+   "id": "94df30db",
    "metadata": {},
    "source": [
     "## After adjustments made to the utility function..."
@@ -488,7 +488,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "be140ab2",
+   "id": "993ed539",
    "metadata": {},
    "outputs": [
     {
@@ -554,9 +554,42 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "8c15b1ca",
+   "metadata": {},
+   "source": [
+    "## Which parameters give us the publication crisis?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "41d61b1c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# aim is to graph scalar for surprise against false publication rate (also graph y = 0.3)\n",
+    "# plot a line corresponding to different scalar values for the amount of data...\n",
+    "# ... this will tell you how well an increase in data is able to curtail false publication values\n",
+    "surprise_values = [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10]\n",
+    "data_values = [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10]"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f0cec886",
+   "id": "898d4c16",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "file = open(\"/Users/marinamancoridis/Thesis/Thesis_Simulations/fpr.p\", 'rb')\n",
+    "fpr = pickle.load(file)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "445e4c60",
    "metadata": {},
    "outputs": [],
    "source": []
